# garage-actix

./: .gitignore  README  README.md
backend/: Cargo.toml
backend/data/: car_management.db  database.db
backend/migrations/: 20241227212604_create_tables.sql
backend/openapi/: openapi.json
backend/src/: main.rs
backend/src/controllers/: car_controller.rs  garage_controller.rs  maintenance_controller.rs  mod.rs
backend/src/models/: car.rs  garage.rs  maintenance.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: CarList.js  GarageList.js  MaintenanceList.js
