[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
actix-cors = "0.6"
log = "0.4.22"
env_logger = "0.11.6"
serde-aux = "1.1"
dotenv = "0.15.0"
